created a new JSON file containing all the card data and tested that it loads into the app.js and also checked the card count and statistics. corrected code to compile without errors for now. still have a way to go. considering changing the card module a bit

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       <div class="banner">
         <h1>Exploding Kittens</h1>
         <div class="tray">
-          Welcome 
+          Welcome
         </div>
       </div>
       <div class="field">
 
       </div>
     </div>
+    <script src="assets/cards.json" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
