finally hooked up the start game button to the js to get the game started. got a long way to go as of yet, hopefully things will actually get done by tomorrow

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         Welcome to Exploding Kittens. This is the super fast version of exploding kittens and so all cards except defuse and exploding kittens have no effect.<br />
         How many players are playing?
         <input type="text" id="numberOfPlayers" placeholder="2" value="" />
-        <button id="newGameButton" value="Start Game!"></button>
+        <button id="newGameButton">Start Game!</button>
       </div>
       <div class="mainField">
         <div class="deck">
           <div class="card">
-
+            <strong>Deck</strong>
           </div>
         </div>
         <div class="discardPile">
           <div class="card">
-
+            <strong>discard pile</strong>
           </div>
         </div>
       </div>
